; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mtd/ubi/extr_kapi.c_ubi_leb_erase.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mtd/ubi/extr_kapi.c_ubi_leb_erase.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ubi_volume_desc = type { i64, %struct.ubi_volume* }
%struct.ubi_volume = type { i64, i32, i64, i32, %struct.ubi_device* }
%struct.ubi_device = type { i32 }

@.str = private unnamed_addr constant [16 x i8] c"erase LEB %d:%d\00", align 1
@UBI_READONLY = common dso_local global i64 0, align 8
@UBI_STATIC_VOLUME = common dso_local global i64 0, align 8
@EROFS = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@EBADF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ubi_leb_erase(%struct.ubi_volume_desc* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ubi_volume_desc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.ubi_volume*, align 8
  %7 = alloca %struct.ubi_device*, align 8
  %8 = alloca i32, align 4
  store %struct.ubi_volume_desc* %0, %struct.ubi_volume_desc** %4, align 8
  store i32 %1, i32* %5, align 4
  %9 = load %struct.ubi_volume_desc*, %struct.ubi_volume_desc** %4, align 8
  %10 = getelementptr inbounds %struct.ubi_volume_desc, %struct.ubi_volume_desc* %9, i32 0, i32 1
  %11 = load %struct.ubi_volume*, %struct.ubi_volume** %10, align 8
  store %struct.ubi_volume* %11, %struct.ubi_volume** %6, align 8
  %12 = load %struct.ubi_volume*, %struct.ubi_volume** %6, align 8
  %13 = getelementptr inbounds %struct.ubi_volume, %struct.ubi_volume* %12, i32 0, i32 4
  %14 = load %struct.ubi_device*, %struct.ubi_device** %13, align 8
  store %struct.ubi_device* %14, %struct.ubi_device** %7, align 8
  %15 = load %struct.ubi_volume*, %struct.ubi_volume** %6, align 8
  %16 = getelementptr inbounds %struct.ubi_volume, %struct.ubi_volume* %15, i32 0, i32 3
  %17 = load i32, i32* %16, align 8
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @dbg_gen(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %17, i32 %18)
  %20 = load %struct.ubi_volume_desc*, %struct.ubi_volume_desc** %4, align 8
  %21 = getelementptr inbounds %struct.ubi_volume_desc, %struct.ubi_volume_desc* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = load i64, i64* @UBI_READONLY, align 8
  %24 = icmp eq i64 %22, %23
  br i1 %24, label %31, label %25

25:                                               ; preds = %2
  %26 = load %struct.ubi_volume*, %struct.ubi_volume** %6, align 8
  %27 = getelementptr inbounds %struct.ubi_volume, %struct.ubi_volume* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = load i64, i64* @UBI_STATIC_VOLUME, align 8
  %30 = icmp eq i64 %28, %29
  br i1 %30, label %31, label %34

31:                                               ; preds = %25, %2
  %32 = load i32, i32* @EROFS, align 4
  %33 = sub nsw i32 0, %32
  store i32 %33, i32* %3, align 4
  br label %66

34:                                               ; preds = %25
  %35 = load i32, i32* %5, align 4
  %36 = icmp slt i32 %35, 0
  br i1 %36, label %43, label %37

37:                                               ; preds = %34
  %38 = load i32, i32* %5, align 4
  %39 = load %struct.ubi_volume*, %struct.ubi_volume** %6, align 8
  %40 = getelementptr inbounds %struct.ubi_volume, %struct.ubi_volume* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 8
  %42 = icmp sge i32 %38, %41
  br i1 %42, label %43, label %46

43:                                               ; preds = %37, %34
  %44 = load i32, i32* @EINVAL, align 4
  %45 = sub nsw i32 0, %44
  store i32 %45, i32* %3, align 4
  br label %66

46:                                               ; preds = %37
  %47 = load %struct.ubi_volume*, %struct.ubi_volume** %6, align 8
  %48 = getelementptr inbounds %struct.ubi_volume, %struct.ubi_volume* %47, i32 0, i32 2
  %49 = load i64, i64* %48, align 8
  %50 = icmp ne i64 %49, 0
  br i1 %50, label %51, label %54

51:                                               ; preds = %46
  %52 = load i32, i32* @EBADF, align 4
  %53 = sub nsw i32 0, %52
  store i32 %53, i32* %3, align 4
  br label %66

54:                                               ; preds = %46
  %55 = load %struct.ubi_device*, %struct.ubi_device** %7, align 8
  %56 = load %struct.ubi_volume*, %struct.ubi_volume** %6, align 8
  %57 = load i32, i32* %5, align 4
  %58 = call i32 @ubi_eba_unmap_leb(%struct.ubi_device* %55, %struct.ubi_volume* %56, i32 %57)
  store i32 %58, i32* %8, align 4
  %59 = load i32, i32* %8, align 4
  %60 = icmp ne i32 %59, 0
  br i1 %60, label %61, label %63

61:                                               ; preds = %54
  %62 = load i32, i32* %8, align 4
  store i32 %62, i32* %3, align 4
  br label %66

63:                                               ; preds = %54
  %64 = load %struct.ubi_device*, %struct.ubi_device** %7, align 8
  %65 = call i32 @ubi_wl_flush(%struct.ubi_device* %64)
  store i32 %65, i32* %3, align 4
  br label %66

66:                                               ; preds = %63, %61, %51, %43, %31
  %67 = load i32, i32* %3, align 4
  ret i32 %67
}

declare dso_local i32 @dbg_gen(i8*, i32, i32) #1

declare dso_local i32 @ubi_eba_unmap_leb(%struct.ubi_device*, %struct.ubi_volume*, i32) #1

declare dso_local i32 @ubi_wl_flush(%struct.ubi_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
